[gd_scene load_steps=7 format=2]

[ext_resource path="res://Inventory/drop.gd" type="Script" id=1]
[ext_resource path="res://Inventory/avaible_weapons.gd" type="Script" id=2]
[ext_resource path="res://Inventory/taken_weapons.gd" type="Script" id=3]
[ext_resource path="res://Inventory/take.gd" type="Script" id=4]
[ext_resource path="res://Inventory/to_menu.gd" type="Script" id=5]
[ext_resource path="res://UI/assets/Background/InventoryWithout.png" type="Texture" id=6]

[node name="inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 120.0

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 3.2, 3.33333 )
texture = ExtResource( 6 )

[node name="avaible_weapons" type="ItemList" parent="."]
modulate = Color( 1, 1, 1, 0.407843 )
margin_left = 19.0
margin_top = 23.0
margin_right = 500.0
margin_bottom = 390.0
max_columns = 5
script = ExtResource( 2 )

[node name="taken_weapons" type="ItemList" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
margin_left = 795.0
margin_top = 29.0
margin_right = 989.0
margin_bottom = 389.0
script = ExtResource( 3 )

[node name="take" type="Button" parent="."]
margin_left = 386.0
margin_top = 432.0
margin_right = 626.0
margin_bottom = 558.0
text = "take"
script = ExtResource( 4 )

[node name="to_menu" type="Button" parent="."]
margin_left = 31.0
margin_top = 437.0
margin_right = 265.0
margin_bottom = 564.0
text = "menu"
script = ExtResource( 5 )

[node name="drop" type="Button" parent="."]
margin_left = 760.0
margin_top = 438.0
margin_right = 991.0
margin_bottom = 562.0
text = "drop"
script = ExtResource( 1 )

[node name="weapon_info" type="Control" parent="."]
margin_left = 544.0
margin_top = 27.0
margin_right = 741.0
margin_bottom = 388.0

[node name="image" type="TextureRect" parent="weapon_info"]
margin_left = 45.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 106.0

[node name="fire_rate" type="Label" parent="weapon_info"]
margin_left = 88.0
margin_top = 102.0
margin_right = 193.0
margin_bottom = 128.0
text = "RATE"

[node name="damage" type="Label" parent="weapon_info"]
margin_left = 89.0
margin_top = 126.0
margin_right = 169.0
margin_bottom = 157.0
text = "DAMAGE"

[node name="bullet_speed" type="Label" parent="weapon_info"]
margin_left = 90.0
margin_top = 154.0
margin_right = 130.0
margin_bottom = 185.0
text = "speed
"

[node name="capacity" type="Label" parent="weapon_info"]
margin_left = 96.0
margin_top = 185.0
margin_right = 136.0
margin_bottom = 199.0
text = "capacity"

[node name="Control" type="Control" parent="weapon_info"]
margin_left = 53.0
margin_top = 140.0
margin_right = 93.0
margin_bottom = 180.0

[node name="TextureRect" type="TextureRect" parent="weapon_info/Control"]
margin_left = -32.0
margin_top = -54.0
margin_right = 8.0
margin_bottom = -14.0

[node name="TextureRect2" type="TextureRect" parent="weapon_info/Control"]
margin_left = -27.0
margin_top = -10.0
margin_right = 13.0
margin_bottom = 30.0

[node name="TextureRect3" type="TextureRect" parent="weapon_info/Control"]
margin_left = -22.0
margin_top = 8.0
margin_right = 18.0
margin_bottom = 48.0

[node name="TextureRect4" type="TextureRect" parent="weapon_info/Control"]
margin_left = -20.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 92.0

[connection signal="item_selected" from="avaible_weapons" to="avaible_weapons" method="_on_item_selected"]
[connection signal="item_selected" from="taken_weapons" to="taken_weapons" method="_on_item_selected"]
[connection signal="gui_input" from="take" to="take" method="_on_gui_input"]
[connection signal="gui_input" from="to_menu" to="to_menu" method="_on_gui_input"]
[connection signal="button_down" from="drop" to="drop" method="_on_button_down"]
